Add Eureka Client support to user-service